@@ -1,3 +1,8 @@
+2004-05-25  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/olympus/mnote-olympus-entry.c: Print bytes if tag is not
+	  known.
+
 2004-05-24  Jan Patera <patera@users.sourceforge.net>
 
 	* libjpeg/jpeg-data.[c,h]: jpeg_data_append_section changed
